end confirm process pages

--- a/order-review.html
+++ b/order-review.html
@@ -32,7 +32,7 @@
 
 
                 <ul class="navbar-nav">
-                    <li class="nav-item a-active">
+                    <li class="nav-item ">
                         <a class="nav-link " href="index.html">الرئيسية</a>
                         <span></span>
                     </li>
@@ -52,8 +52,8 @@
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
                         <span></span>
                     </li>
-                     <!--  -->
-                     <li class="nav-item a-collapsed">
+                    <!--  -->
+                    <li class="nav-item a-collapsed">
                         <a class="nav-link " href="favorite.html">المفضلة</a>
                     </li>
                     <li class="nav-item a-collapsed">
@@ -95,85 +95,82 @@
             </div>
         </nav>
 
+        <!-- Starting  Add Adddres section -->
+        <h1 class="text-center my-4" style="color: #F8A421;">مراجعة الطلب </h1>
+        <div class="container a-add-addres a-bg-white a-img-container">
+            <div class="row mx-auto">
+                <div class="col-md-6 ">
+                    <div class="row rounded a-bg-light-2 w-98 mx-auto mt-5">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        </div>
+                        <div class="col-8 ">
+                            <div class="a-border-right">
+                                <button class="btn float-right bg-light rounded-circle"><i
+                                        class="far fa-trash-alt text-center"></i></button>
+                                <div class="mb-3">
+                                    <h4 class="mt-4">عجل بلدي</h4>
+                                    <h5>الحجم : صغير</h5>
+                                    <h5>السعر : <span style="color: #F8A421;">800.00 ريال </span></h5>
+                                    <h5>الكمية : <span style="color: #F8A421;">3</span></h5>
+                                </div>
+                            </div>
 
-
-        <!-- starting  About  section -->
-
-        <!-- Ending Tow photo section -->
-
-        <!-- Starting Product Section -->
-        <div class="container mt-5 confirm-section">
-            <div class="row ">
-                <div class="col-12 mb-5 ">
-                    <h1 class="text-center">تأكيد وتنفيد الطلب </h1>
-                </div>
-                <div class="col-md-5">
-                    <div class="a-img-container a-bg-light">
-                        <img class="w-100" src="./imgs/Buffalo.png" alt="">
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-7">
-                    <div class="details-container ">
-                        <div class="a-bg-light-2 a-img-container p-3">
-                            <h3>عجل بلدي</h3>
+                <div class="col-md-6 ">
+                    <div class="row rounded a-bg-light-2 w-98 mx-auto mt-5">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
-                        <div class="a-bg-light-2 a-img-container p-3 mt-3">
-                            <h3> الحجم : صغير</h3>
-                        </div>
-                        <div class="a-bg-light a-img-container p-3 mt-3">
-                            <h3>السعر :
-                                <span>800.00 ريال </span>
-                            </h3>
-                        </div>
-                        <div class="a-bg-light-2 a-img-container p-3 mt-3">
-                            <h3>الكمية :
-                                <span>
-                                    <button class="btn a-bg-light a-btn-add">
-                                        <i class="fas fa-plus-circle"></i>
-                                    </button>
-                                    <span class="mx-2 text-secondary">2</span>
-                                    <button class="btn a-bg-light a-btn-add">
-                                        <i class="fas fa-minus-circle"></i>
-                                    </button>
-                                </span>
-                            </h3>
+                        <div class="col-8 ">
+                            <div class="a-border-right">
+                                <button class="btn float-right bg-light rounded-circle"><i
+                                        class="far fa-trash-alt text-center"></i></button>
+                                <div class="mb-3">
+                                    <h4 class="mt-4">عجل بلدي</h4>
+                                    <h5>الحجم : صغير</h5>
+                                    <h5>السعر : <span style="color: #F8A421;">800.00 ريال </span></h5>
+                                    <h5>الكمية : <span>3</span></h5>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row mt-5">
-                <div class="col-12">
-                    <div>
-                        <img class="" src="./imgs/co.png" alt="">
-                        <span class="p-3 pt-5">كوبون الخصم</span>
+            <div class="row">
+                <div class="col-6">
+                    <div class="w-75 a-bg-light-2 my-5 p-4 a-img-container">
+                        <div class="my-4">
+                            <h4>اجمالي المبلغ  <span style="color:#f8a421; float: left;">800 ريـال</span></h4>
+                        </div>
+                        <div class="my-4">
+                            <h4> قسيمة الشراء  <span style="color:#f8a421 ; float: left;"> -25 %</span></h4>
+                        </div>
+                        <div class="my-4">
+                            <h4>اجمالي المبلغ  <span style="color:#f8a421 ; float: left;">800 ريـال</span></h4>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    
-                    <form action="">
-                    <div class="form-group form-inline m-3">
-                        <input type="text" class="form-control form-control-lg  a-bg-light w-70" id=""
-                            aria-describedby="" placeholder=" كوبون حصم">
-                        <button class="btn a-bg  btn-lg  w-25"> تأكيد </button>
-                    </div>
-                </form>
-                </div>
-                <div class="col-md-6">
-                    <button class="btn a-bg btn-lg w-100 a-right-round m-3" >
-                        المجموع الكلي :   800.00  ريال 
+                <div class="col-6">
+                    <button class="btn a-bg btn-lg w-50 a-right-round mt-5 " style="height: 80px; float: left;">
+                        عدد الاصناف : 3 
                     </button>
                 </div>
-
-                <div class="col-12 mt-5">
-                    <a href="./confirm-addres.html">
-                        <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> متابعة </button>
-                    </a>
-                </div>
             </div>
 
+            <div class="col-12 mt-5">
+                <a href="./success.html">
+                    <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد </button>
+                </a>
+            </div>
         </div>
-        <!-- Ending Product Section -->
+
+        <!-- Ending Add Adddres section  -->
+
 
 
         <div class=" mt-5 mb-5">
