--- a/success.html
+++ b/success.html
@@ -32,7 +32,7 @@
 
 
                 <ul class="navbar-nav">
-                    <li class="nav-item a-active">
+                    <li class="nav-item ">
                         <a class="nav-link " href="index.html">الرئيسية</a>
                         <span></span>
                     </li>
@@ -52,8 +52,8 @@
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
                         <span></span>
                     </li>
-                     <!--  -->
-                     <li class="nav-item a-collapsed">
+                    <!--  -->
+                    <li class="nav-item a-collapsed">
                         <a class="nav-link " href="favorite.html">المفضلة</a>
                     </li>
                     <li class="nav-item a-collapsed">
@@ -95,85 +95,24 @@
             </div>
         </nav>
 
-
-
-        <!-- starting  About  section -->
-
-        <!-- Ending Tow photo section -->
-
-        <!-- Starting Product Section -->
-        <div class="container mt-5 confirm-section">
-            <div class="row ">
-                <div class="col-12 mb-5 ">
-                    <h1 class="text-center">تأكيد وتنفيد الطلب </h1>
-                </div>
-                <div class="col-md-5">
-                    <div class="a-img-container a-bg-light">
-                        <img class="w-100" src="./imgs/Buffalo.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-7">
-                    <div class="details-container ">
-                        <div class="a-bg-light-2 a-img-container p-3">
-                            <h3>عجل بلدي</h3>
-                        </div>
-                        <div class="a-bg-light-2 a-img-container p-3 mt-3">
-                            <h3> الحجم : صغير</h3>
-                        </div>
-                        <div class="a-bg-light a-img-container p-3 mt-3">
-                            <h3>السعر :
-                                <span>800.00 ريال </span>
-                            </h3>
-                        </div>
-                        <div class="a-bg-light-2 a-img-container p-3 mt-3">
-                            <h3>الكمية :
-                                <span>
-                                    <button class="btn a-bg-light a-btn-add">
-                                        <i class="fas fa-plus-circle"></i>
-                                    </button>
-                                    <span class="mx-2 text-secondary">2</span>
-                                    <button class="btn a-bg-light a-btn-add">
-                                        <i class="fas fa-minus-circle"></i>
-                                    </button>
-                                </span>
-                            </h3>
-                        </div>
-                    </div>
+        <!-- Starting  Add Adddres section -->
+        <div class="container">
+            <div class="row mx-auto">
+                <div class="col">
+                    <img class="mx-auto d-block" src="./imgs/succsess.png" width="270px" alt="">
+                    <h3 class="text-center ">تم تأكيد طلبك بنجاح</h3>
+                    <h4 class="text-center text-secondary">سيتم التواصل معك لتأكيد الطلب قبل التجهيز</h4>
                 </div>
             </div>
-
-            <div class="row mt-5">
-                <div class="col-12">
-                    <div>
-                        <img class="" src="./imgs/co.png" alt="">
-                        <span class="p-3 pt-5">كوبون الخصم</span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    
-                    <form action="">
-                    <div class="form-group form-inline m-3">
-                        <input type="text" class="form-control form-control-lg  a-bg-light w-70" id=""
-                            aria-describedby="" placeholder=" كوبون حصم">
-                        <button class="btn a-bg  btn-lg  w-25"> تأكيد </button>
-                    </div>
-                </form>
-                </div>
-                <div class="col-md-6">
-                    <button class="btn a-bg btn-lg w-100 a-right-round m-3" >
-                        المجموع الكلي :   800.00  ريال 
-                    </button>
-                </div>
-
-                <div class="col-12 mt-5">
-                    <a href="./confirm-addres.html">
-                        <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> متابعة </button>
-                    </a>
-                </div>
+            <div class="col-12 mt-5">
+                <a href="./index.html">
+                    <button class=" btn a-bg a-img-container btn-lg w-50 d-block mx-auto" style="height: 70px;"> الذهاب الي الرئيسية </button>
+                </a>
             </div>
-
         </div>
-        <!-- Ending Product Section -->
+
+        <!-- Ending Add Adddres section  -->
+
 
 
         <div class=" mt-5 mb-5">
