--- a/confirm-addres.html
+++ b/confirm-addres.html
@@ -97,11 +97,12 @@
 
         <!-- Starting  Add Adddres section -->
         <div class="container a-add-addres">
-            <h1 class="text-center" style="color: #F8A421;">أدخل العنوان</h1>
-            <form action="">
-                <div class="row shadow a-bg-white">
-                    <div class="col-lg-4 my-5">
-                        <div class="row my-3">
+            <h1 class="text-center my-4" style="color: #F8A421;">أدخل العنوان</h1>
+           <div class="a-form-container a-bg-white shadow a-img-container p-5">
+            <form action="" class="">
+                <div class="row my-5">
+                    <div class="col-lg-5 pl-5">
+                        <div class="row">
                             <div class="col-9 ">
                                 <input class="form-control form-control-lg a-bg-light" type="text"
                                     placeholder="طريق الملك فهد , الرياض">
@@ -130,11 +131,57 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-7">
-                        <div class="w-75 mr-5 a-border-right">fdsf</div>
+                    <div class="col-1 a-border-left"> 
+                    </div>
+                    <div class="col-1"></div>
+                    <div class="col-lg-5 pr-l">
+                        <h5 class="">وقت التوصيل المناسب</h5>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="day">اليوم</label>
+                                    <input class="form-control form-control-lg a-bg-light" type="date" name="" id=""
+                                        placeholder="وقت التوصيل المناسب">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <label for="day">وقت التوصيل</label>
+                                <select class="form-control form-control-lg a-bg-light" id="sel1">
+                                    <option></option>
+                                </select>
+                            </div>
+                        </div>
+                        <h5 class="my-2">طريقة الدفع</h5>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
+                                    <label class="form-check-label " for="radio1">
+                                        <span>عند الاستلام</span>
+                                        <input type="radio" class="form-check-input" id="radio1" name="optradio"
+                                            value="option1" checked>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
+                                    <label class="form-check-label" for="radio2">
+                                        <span class="">بطاقة الاتمان</span>
+                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
+                                            value="option2">
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
+           </div>
+
+           <div class="col-12 mt-5">
+            <a href="./order-review.html">
+                <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد </button>
+            </a>
+        </div>
         </div>
 
         <!-- Ending Add Adddres section  -->
