--- a/index.html
+++ b/index.html
@@ -380,11 +380,16 @@
                             <div class="a-img-container a-bg ">
                                 <div class="row" style="height: 220px;">
                                     <div class="col-md-6  my-auto ">
-                                        <img class="w-60 float-right align-middle img-fluid" src="./imgs/Play Store.png"
+                                        <a href="">
+                                            <img class="w-60 float-right align-middle img-fluid" src="./imgs/Play Store.png"
                                             alt="">
+                                        </a>
                                     </div>
                                     <div class="col-md-6 my-auto">
+                                        <a href="">
                                         <img class="w-60 float-left img-fluid" src="./imgs/App Store.png" alt="">
+
+                                        </a>
                                     </div>
                                 </div>
                             </div>
