--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
                     <li class="nav-item a-collapsed">
                         <a class="nav-link " href="cart.html">سلة التسوق</a>
                     </li>
-                    <li class="nav-item a-collapsed" data-toggle="modal"
-                    data-target="#myModal">
+                    <li class="nav-item a-collapsed" data-toggle="modal" data-target="#myModal">
                         <span class="nav-link">تسجيل الدخول</span>
-                </li>
+                    </li>
                     <!--  -->
                 </ul>
                 <div class="a-right-nav ">
@@ -88,7 +87,7 @@
                                 data-target="#myModal" style="width: 210px;">
                                 <span class="a-bg">
                                     <i class="far fa-user-circle"></i>
-                                    <span class="px-2" >تسجيل الدخول</span>
+                                    <span class="px-2">تسجيل الدخول</span>
                                 </span>
                             </button>
 
@@ -133,7 +132,8 @@
                                         </div>
                                         <div class="m-3 text-center">
                                             <button type="submit" class="btn a-bg m-3 w-100 ">دخول</button>
-                                            <a href="" class="text-danger"> نسيت كلمة المرور ؟</a>
+                                            <a href="" class="text-danger" data-toggle="modal" data-target="#myModal3"
+                                                data-dismiss="modal"> نسيت كلمة المرور ؟</a>
                                             <hr>
                                             <button type="submit"
                                                 class="btn btn-primary m-3 w-100 mx-auto d-block">التسجيل من
@@ -217,6 +217,73 @@
             </div>
         </div>
         <!--  -->
+
+        <!-- forgtt password model  -->
+        <div class="modal log-in fade" id="myModal3">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
+                    <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
+                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock.png" alt="">
+                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3">  ادخل رقم الجوال الذي سجلت به من قبل , لارسال الكود عليه</h6>
+                    <form action="" class="d-block w-100">
+                        <div class="form-group mx-auto w-75 m-3 ">
+                            <label class="" for="">رقم الجوال</label>
+                            <input type="text" class="form-control form-control-sm " id="" aria-describedby="" placeholder="+096 666 9999">
+                        </div>
+                        <div class="w-75 mx-auto my-3">
+                            <button class="btn a-bg d-block mx-auto w-100"  data-toggle="modal"
+                            data-target="#myModal4" data-dismiss="modal">التالي</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal log-in fade" id="myModal4">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
+                    <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
+                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock-2.png" alt="">
+                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل الكود المرسل علي جوالك</h6>
+                    <form action="" class="d-block w-100">
+                        <div class="form-group mx-auto w-75 m-3 ">
+                            <label class="" for="">الكود </label>
+                            <input type="text" class="form-control form-control-sm " id="" aria-describedby="" placeholder="">
+                        </div>
+                        <div class="w-75 mx-auto my-3">
+                            <button class="btn a-bg d-block mx-auto w-100" data-toggle="modal"
+                            data-target="#myModal5" data-dismiss="modal">التالي</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal log-in fade" id="myModal5">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
+                    <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
+                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock.png" alt="">
+                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل كلمة المرور الجديدة   </h6>
+                    <form action="" class="d-block w-100">
+                        <div class="form-group mx-auto w-75 m-3 ">
+                            <label class="" for="">كلمة المرور </label>
+                            <input type="password" class="form-control form-control-sm " id="" aria-describedby="" placeholder="* * * * * * ">
+                        </div>
+                        <div class="form-group mx-auto w-75 m-3 ">
+                            <label class="" for="">تأكبد كلمة المرور </label>
+                            <input type="password" class="form-control form-control-sm " id="" aria-describedby="" placeholder="* * * * * * ">
+                        </div>
+                        <div class="w-75 mx-auto my-3">
+                            <button class="btn a-bg d-block mx-auto w-100" >حفظ</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
         <!-- Starting The Slider  -->
         <div class="slider">
@@ -381,13 +448,13 @@
                                 <div class="row" style="height: 220px;">
                                     <div class="col-md-6  my-auto ">
                                         <a href="">
-                                            <img class="w-60 float-right align-middle img-fluid" src="./imgs/Play Store.png"
-                                            alt="">
+                                            <img class="w-60 float-right align-middle img-fluid"
+                                                src="./imgs/Play Store.png" alt="">
                                         </a>
                                     </div>
                                     <div class="col-md-6 my-auto">
                                         <a href="">
-                                        <img class="w-60 float-left img-fluid" src="./imgs/App Store.png" alt="">
+                                            <img class="w-60 float-left img-fluid" src="./imgs/App Store.png" alt="">
 
                                         </a>
                                     </div>
