--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg a-nav">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="imgs/main-logo.png" alt="logo" style="width:120px;">
+                <img class="a-logo" src="imgs/main-logo.png" alt="logo" >
             </a>
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 القائمة <i class="fas fa-align-justify"></i>
@@ -290,7 +290,7 @@
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./imgs/slide.png" alt="Los Angeles" width="100%" height="500">
+                        <img class="img-fluid" src="./imgs/slide.png" alt="Los Angeles" width="100%" height="500">
                         <div class="carousel-caption">
                             <p>
                                 لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./imgs/slide.png" alt="Chicago" width="100%" height="500">
+                        <img class="img-fluid" src="./imgs/slide.png" alt="Chicago" width="100%" height="500">
                         <div class="carousel-caption">
                             <p>
                                 لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه
@@ -324,7 +324,7 @@
         <div class="about">
             <div class="row">
                 <div class="col-md-7">
-                    <div class="btn a-bg a-left-round w-30 ">
+                    <div class="btn a-bg a-left-round w-50 ">
                         <h3> <a href="" class="a-link">من نحن</a> </h3>
                     </div>
                     <div>
@@ -336,7 +336,7 @@
                             وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص،
                         </h5>
                     </div>
-                    <div class="btn a-bg w-30">
+                    <div class="btn a-bg w-50">
                         <h5><a href="" class="a-link"> رؤية المزيد </a></h5>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                     </a>
                 </div>
                 <div class="col-12 text-center mt-4">
-                    <button class="btn a-bg-white btn-lg d-block mx-auto my-4 w-25">
+                    <button class="btn a-bg-white btn-lg d-block mx-auto my-4 w-48">
                         رؤية المزيد
                     </button></div>
             </div>
@@ -466,12 +466,12 @@
             </div>
         </div>
 
-        <div class=" container-fluid a-dark-bg mt-5 a-sent">
+        <div class="container-fluid a-dark-bg mt-5 a-sent">
             <div class="row h-100 ">
                 <div class="col-md-5 col-sm-5 my-auto">
                     <div class="">
                         <div class="float-left mr-4">
-                            <img class="" width="50px" src="./imgs/invite.png" alt="">
+                            <img class="d-block mx-auto" width="50px" src="./imgs/invite.png" alt="">
                         </div>
                         <div class="float-left mr-3">
                             <h4 class="text-white">لإرسال احدث العروض</h4>
@@ -484,7 +484,7 @@
                     <form class="form-inline" action="">
                         <input type="email" class="form-control w-50 form-control-lg" id="email"
                             placeholder="البريد الالكتروني..." name="email">
-                        <button type="submit" class="btn a-bg w-25 btn-lg">اشتراك</button>
+                        <button type="submit" class="btn a-bg w-30 btn-lg">اشتراك</button>
                     </form>
                 </div>
             </div>
@@ -598,7 +598,7 @@
             <div class="footer-bg-bg"></div>
         </div>
         <div class="row">
-            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020 khayrat Al Reem </h4>
+            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020  <br> khayrat Al Reem </h4>
         </div>
     </div>
 
