update product page

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             <div class="footer-bg-bg"></div>
         </div>
         <div class="row">
-            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020  <br> khayrat Al Reem </h4>
+            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020  khayrat Al Reem </h4>
         </div>
     </div>
 
