--- a/product.html
+++ b/product.html
@@ -98,9 +98,10 @@
         <!-- Starting The Slider  -->
         <div class="slider">
             <div id="demo" class="carousel slide" data-ride="carousel">
+               <button class="btn a-love-icon"> <i class="far fa-heart "></i></button>
                 <div class="carousel-inner shadow">
                     <div class="carousel-item a-carousel-item active">
-                        <img class="mx-auto d-blok" src="./imgs/Buffalo.png" alt="Los Angeles" width="50%" height="400">
+                        <img class="mx-auto d-blok img-fluid" src="./imgs/Buffalo.png" alt="Los Angeles" width="50%" height="400">
                     </div>
                     <!-- <div class="carousel-item">
                         <img class="mx-auto d-blok" src="./imgs/Buffalo.png" alt="Chicago" width="50%" height="400">
