--- a/product.html
+++ b/product.html
@@ -98,7 +98,7 @@
         <!-- Starting The Slider  -->
         <div class="slider">
             <div id="demo" class="carousel slide" data-ride="carousel">
-               <button class="btn a-love-icon"> <i class="far fa-heart "></i></button>
+               <i class="far fa-heart a-love-icon"></i>
                 <div class="carousel-inner shadow">
                     <div class="carousel-item a-carousel-item active">
                         <img class="mx-auto d-blok img-fluid" src="./imgs/Buffalo.png" alt="Los Angeles" width="50%" height="400">
