--- a/order-review.html
+++ b/order-review.html
@@ -164,7 +164,7 @@
 
             <div class="col-12 mt-5">
                 <a href="./success.html">
-                    <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد </button>
+                    <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد الطلب </button>
                 </a>
             </div>
         </div>
@@ -277,16 +277,16 @@
                                 <div class="menu v-c">
                                     <ul class="nav ">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الرئيسية</a>
+                                            <a class="nav-link a-footer-link" href="index.html">الرئيسية</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">من نحن</a>
+                                            <a class="nav-link a-footer-link" href="about.html">من نحن</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">المواشي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">اتصل بنا</a>
+                                            <a class="nav-link a-footer-link" href="contact.html">اتصل بنا</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -295,13 +295,16 @@
                                 <div class="second-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">حسابي</a>
+                                            <a class="nav-link a-footer-link" href="offers.html">العروض</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">التواصل مع المسؤلين</a>
+                                            <a class="nav-link a-footer-link" href="account.html">حسابي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الشروط والاحكام</a>
+                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع المسؤلين</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link a-footer-link" href="terms.html">الشروط والاحكام</a>
                                         </li>
 
                                     </ul>
