--- a/terms.html
+++ b/terms.html
@@ -240,18 +240,17 @@
                                 <div class="menu v-c">
                                     <ul class="nav ">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الرئيسية</a>
+                                            <a class="nav-link a-footer-link" href="index.html">الرئيسية</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">من نحن</a>
+                                            <a class="nav-link a-footer-link" href="about.html">من نحن</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">المواشي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">اتصل بنا</a>
+                                            <a class="nav-link a-footer-link" href="contact.html">اتصل بنا</a>
                                         </li>
-                                       
                                     </ul>
                                 </div>
                             </div>
@@ -259,13 +258,16 @@
                                 <div class="second-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">حسابي</a>
+                                            <a class="nav-link a-footer-link" href="offers.html">العروض</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">التواصل مع المسؤلين</a>
+                                            <a class="nav-link a-footer-link" href="account.html">حسابي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الشروط والاحكام</a>
+                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع المسؤلين</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link a-footer-link" href="terms.html">الشروط والاحكام</a>
                                         </li>
 
                                     </ul>
