--- a/confirm.html
+++ b/confirm.html
@@ -155,7 +155,7 @@
                     <div class="form-group form-inline m-3">
                         <input type="text" class="form-control form-control-lg  a-bg-light w-70" id=""
                             aria-describedby="" placeholder=" كوبون حصم">
-                        <button class="btn a-bg  btn-lg  w-25"> تأكيد </button>
+                        <button class="btn a-bg  btn-lg  w-25"> تأكيد الطلب </button>
                     </div>
                 </form>
                 </div>
@@ -280,16 +280,16 @@
                                 <div class="menu v-c">
                                     <ul class="nav ">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الرئيسية</a>
+                                            <a class="nav-link a-footer-link" href="index.html">الرئيسية</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">من نحن</a>
+                                            <a class="nav-link a-footer-link" href="about.html">من نحن</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">المواشي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">اتصل بنا</a>
+                                            <a class="nav-link a-footer-link" href="contact.html">اتصل بنا</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -298,13 +298,16 @@
                                 <div class="second-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">حسابي</a>
+                                            <a class="nav-link a-footer-link" href="offers.html">العروض</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">التواصل مع المسؤلين</a>
+                                            <a class="nav-link a-footer-link" href="account.html">حسابي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="#">الشروط والاحكام</a>
+                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع المسؤلين</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link a-footer-link" href="terms.html">الشروط والاحكام</a>
                                         </li>
 
                                     </ul>
