--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
     <link rel="stylesheet" href="css/bootstrap-rtl.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="../demo/css/styles.css"> -->
+    <link rel="stylesheet" href="./css/animate.css">
     <title>خيرات الريم</title>
+
+
 </head>
 
+
 <body>
-    <div class="container-fluid">
+    <div id="loader" class="loader-wrapper animated fadeOut delay-2s slow-2s" >
+        <img class="d-block mx-auto animated " src="./imgs/loading-خيرات-الريم.gif" alt="">
+    </div>
+    
+
+    <div id="site"  class="container-fluid animated fadeIn">
         <div class="a-right-mask">
             <img src="./imgs/right-mask.png" alt="Mask" class="a-right-mask-img">
         </div>
@@ -25,7 +33,7 @@
         <nav class="navbar navbar-expand-lg a-nav">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="index.html">
-                <img class="a-logo" src="imgs/main-logo.png" alt="logo" >
+                <img class="a-logo" src="imgs/main-logo.png" alt="logo">
             </a>
             <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 القائمة <i class="fas fa-align-justify"></i>
@@ -224,16 +232,18 @@
                 <div class="modal-content">
                     <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
                     <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
-                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock.png" alt="">
-                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3">  ادخل رقم الجوال الذي سجلت به من قبل , لارسال الكود عليه</h6>
+                    <img class="mx-auto d-block" width="120px" src="./imgs/lock.png" alt="">
+                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل رقم الجوال الذي سجلت به من
+                        قبل , لارسال الكود عليه</h6>
                     <form action="" class="d-block w-100">
                         <div class="form-group mx-auto w-75 m-3 ">
                             <label class="" for="">رقم الجوال</label>
-                            <input type="text" class="form-control form-control-sm " id="" aria-describedby="" placeholder="+096 666 9999">
+                            <input type="text" class="form-control form-control-sm " id="" aria-describedby=""
+                                placeholder="+096 666 9999">
                         </div>
                         <div class="w-75 mx-auto my-3">
-                            <button class="btn a-bg d-block mx-auto w-100"  data-toggle="modal"
-                            data-target="#myModal4" data-dismiss="modal">التالي</button>
+                            <button class="btn a-bg d-block mx-auto w-100" data-toggle="modal" data-target="#myModal4"
+                                data-dismiss="modal">التالي</button>
                         </div>
                     </form>
                 </div>
@@ -245,16 +255,17 @@
                 <div class="modal-content">
                     <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
                     <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
-                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock-2.png" alt="">
+                    <img class="mx-auto d-block" width="120px" src="./imgs/lock-2.png" alt="">
                     <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل الكود المرسل علي جوالك</h6>
                     <form action="" class="d-block w-100">
                         <div class="form-group mx-auto w-75 m-3 ">
                             <label class="" for="">الكود </label>
-                            <input type="text" class="form-control form-control-sm " id="" aria-describedby="" placeholder="">
+                            <input type="text" class="form-control form-control-sm " id="" aria-describedby=""
+                                placeholder="">
                         </div>
                         <div class="w-75 mx-auto my-3">
-                            <button class="btn a-bg d-block mx-auto w-100" data-toggle="modal"
-                            data-target="#myModal5" data-dismiss="modal">التالي</button>
+                            <button class="btn a-bg d-block mx-auto w-100" data-toggle="modal" data-target="#myModal5"
+                                data-dismiss="modal">التالي</button>
                         </div>
                     </form>
                 </div>
@@ -266,19 +277,21 @@
                 <div class="modal-content">
                     <img class="mask " src="./imgs/log-in-mask.png" style="width: 200px;" alt="">
                     <h5 class="text-center mt-5 my-3">نسيت كلمة المرور ؟</h5>
-                    <img class="mx-auto d-block" width="120px"  src="./imgs/lock.png" alt="">
-                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل كلمة المرور الجديدة   </h6>
+                    <img class="mx-auto d-block" width="120px" src="./imgs/lock.png" alt="">
+                    <h6 class="text-secondary text-center w-75 mx-auto d-block my-3"> ادخل كلمة المرور الجديدة </h6>
                     <form action="" class="d-block w-100">
                         <div class="form-group mx-auto w-75 m-3 ">
                             <label class="" for="">كلمة المرور </label>
-                            <input type="password" class="form-control form-control-sm " id="" aria-describedby="" placeholder="* * * * * * ">
+                            <input type="password" class="form-control form-control-sm " id="" aria-describedby=""
+                                placeholder="* * * * * * ">
                         </div>
                         <div class="form-group mx-auto w-75 m-3 ">
                             <label class="" for="">تأكبد كلمة المرور </label>
-                            <input type="password" class="form-control form-control-sm " id="" aria-describedby="" placeholder="* * * * * * ">
+                            <input type="password" class="form-control form-control-sm " id="" aria-describedby=""
+                                placeholder="* * * * * * ">
                         </div>
                         <div class="w-75 mx-auto my-3">
-                            <button class="btn a-bg d-block mx-auto w-100" >حفظ</button>
+                            <button class="btn a-bg d-block mx-auto w-100">حفظ</button>
                         </div>
                     </form>
                 </div>
@@ -559,7 +572,8 @@
                                             <a class="nav-link a-footer-link" href="account.html">حسابي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع المسؤلين</a>
+                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع
+                                                المسؤلين</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="terms.html">الشروط والاحكام</a>
@@ -601,7 +615,7 @@
             <div class="footer-bg-bg"></div>
         </div>
         <div class="row">
-            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020  khayrat Al Reem </h4>
+            <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020 khayrat Al Reem </h4>
         </div>
     </div>
 
@@ -624,6 +638,25 @@
     <script src="./js/responsiveCarousel.min.js"></script>
 
     <script src="./js/script.js"></script>
+    <script>
+        var site = document.getElementById("site");
+        var loader = document.getElementById("loader");
+        site.style.display = "none"
+      setTimeout(function () {
+          loader.style.display = "none";
+          site.style.display = "block"
+      }, 3000)
+
+      // window.setTimeout(function(
+      //     load
+      // ){},7000)
+
+     
+    //   window.addEventListener('load', function () {
+    //       loader.style.visibility = "hidden";
+    //   });
+  </script>
+
 
 </body>
 
