--- a/account.html
+++ b/account.html
@@ -107,7 +107,7 @@
                                 <h4 class="text-center">باسم محمود</h4>
                                 <h5 class="text-center">+0 233012 4234</h5>
                                 <h5 class="text-center">info@company.com</h5>
-                                <button class="btn-dark btn-lg mx-auto d-block"> تعيدل الملف الشخصي</button>
+                                <a href="update-profile.html"><button class="btn-dark btn-lg mx-auto d-block"> تعيدل الملف الشخصي</button></a>
                             </div>
                         </div>
                     </div>
