--- a/account.html
+++ b/account.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mt-5 pl-2">
+                <div class="col-md-6 my-5 pl-2">
                     <div class="ml-4">
                         <div class="account ">
                             <div class="acc-short a-bg float-left p-3 rounded m-1 text-center">
