--- a/cart.html
+++ b/cart.html
@@ -103,8 +103,40 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-4">
-                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4 d-flex">
+                            <img class="m-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        </div>
+                        <div class="col-8 ">
+                            <div class="a-border-right">
+                                <button class="btn float-right bg-light rounded-circle"><i
+                                        class="far fa-trash-alt text-center"></i></button>
+                                <div class="mb-3">
+                                    <h4 class="mt-4">عجل بلدي</h4>
+                                    <h5>الحجم : صغير</h5>
+                                    <h5>السعر : <span style="color: #F8A421;">800.00 ريال </span></h5>
+
+                                    <div class="btn-group rounded-right" style="background-color: white;">
+                                        <button class="btn  a-btn-add">
+                                            <i class="fas fa-plus-circle"></i>
+                                        </button>
+                                        <span class="btn a-btn-add mx-2 text-secondary">2</span>
+                                        <button class="btn a-btn-add ">
+                                            <i class="fas fa-minus-circle"></i>
+                                        </button>
+                                        <button class="btn a-bg w-25 rounded-right a-btn-add">
+                                            <i class="fas fa-shopping-bag"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 ">
+                    <div class="row rounded a-bg-light-2 w-98 mt-5">
+                        <div class="col-4 d-flex">
+                            <img class="m-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
                         <div class="col-8 ">
                             <div class="a-border-right">
@@ -167,40 +199,8 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-4">
-                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
-                        </div>
-                        <div class="col-8 ">
-                            <div class="a-border-right">
-                                <button class="btn float-right bg-light rounded-circle"><i
-                                        class="far fa-trash-alt text-center"></i></button>
-                                <div class="mb-3">
-                                    <h4 class="mt-4">عجل بلدي</h4>
-                                    <h5>الحجم : صغير</h5>
-                                    <h5>السعر : <span style="color: #F8A421;">800.00 ريال </span></h5>
-
-                                    <div class="btn-group rounded-right" style="background-color: white;">
-                                        <button class="btn  a-btn-add">
-                                            <i class="fas fa-plus-circle"></i>
-                                        </button>
-                                        <span class="btn a-btn-add mx-2 text-secondary">2</span>
-                                        <button class="btn a-btn-add ">
-                                            <i class="fas fa-minus-circle"></i>
-                                        </button>
-                                        <button class="btn a-bg w-25 rounded-right a-btn-add">
-                                            <i class="fas fa-shopping-bag"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 ">
-                    <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-4">
-                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4 d-flex">
+                            <img class="m-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
                         <div class="col-8 ">
                             <div class="a-border-right">
@@ -235,7 +235,7 @@
 
             </div>
 
-            <button style="height: 5rem; font-size: x-large;" class="btn a-bg btn-lg w-50 a-left-round m-5">
+            <button style="height: 5rem; font-size: x-large;" class="btn a-bg btn-lg w-75 a-left-round mt-5">
                 اجمالي المبلغ : 800.00 ريال
             </button>
 
