--- a/order-review.html
+++ b/order-review.html
@@ -101,8 +101,8 @@
             <div class="row mx-auto">
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mx-auto mt-5">
-                        <div class="col-4">
-                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4 d-flex">
+                            <img class="m-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
                         <div class="col-8 ">
                             <div class="a-border-right">
@@ -121,8 +121,8 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mx-auto mt-5">
-                        <div class="col-4">
-                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4 d-flex">
+                            <img class="m-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
                         <div class="col-8 ">
                             <div class="a-border-right">
@@ -142,8 +142,8 @@
             </div>
 
             <div class="row">
-                <div class="col-6">
-                    <div class="w-75 a-bg-light-2 my-5 p-4 a-img-container">
+                <div class="col-lg-6 col-12">
+                    <div class="w-100 a-bg-light-2 my-5 p-4 a-img-container">
                         <div class="my-4">
                             <h4>اجمالي المبلغ  <span style="color:#f8a421; float: left;">800 ريـال</span></h4>
                         </div>
@@ -155,8 +155,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <button class="btn a-bg btn-lg w-50 a-right-round mt-5 " style="height: 80px; float: left;">
+                <div class="col-md-6">
+                    <button class="btn a-bg btn-lg w-100 a-right-round mt-5 " style="height: 80px; ">
                         عدد الاصناف : 3 
                     </button>
                 </div>
